--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,12 @@ services:
       - .:/code
     ports:
       - 8000:8000
+    environment:
+     - DB_NAME=usersdb
+     - DB_USER=testuser
+     - DB_PASSWORD=password1!
+     - DB_HOST=db
+     - DB_PORT=5432
     depends_on:
       - db
   db:
